Configured and tested console email backend for development.

--- a/accounts/templates/accounts/activation_completed.html
+++ b/accounts/templates/accounts/activation_completed.html
@@ -6,6 +6,6 @@
 
 {% block content %}
     <div class="row">
-        <p>Thank you for your registration. Your account has been activated. <a href="{% url 'login' %}">Go to your profile</a></p>
+        <p>Thank you for your registration. Your account has been activated. <a href="{% url 'accounts:login' %}">Go to your profile</a></p>
     </div>
 {% endblock %}
