--- a/accounts/templates/accounts/navigation.html
+++ b/accounts/templates/accounts/navigation.html
@@ -1,7 +1,7 @@
 {% if user.is_authenticated %}
-<a href="{% url 'accounts:view_profile' %}" class="btn btn-secondary {% if request.resolver_match.view_name == 'accounts:view_profile' %}active{% endif %}">View Profile</a>
-<a href="{% url 'accounts:update_profile' %}" class="btn btn-secondary {% if request.resolver_match.view_name == 'accounts:update_profile' %}active{% endif %}">Edit Profile</a>
-<a href="{% url 'accounts:avatar_change' %}" class="btn btn-secondary {% if request.resolver_match.view_name == 'avatar_change' %}active{% endif %}">Change profile image</a>
-<a href="{% url 'accounts:change_password' %}" class="btn btn-secondary {% if request.resolver_match.view_name == 'accounts:change_password' %}active{% endif %}">Change password</a>
+<a href="{% url 'profile_view' %}" class="btn btn-secondary {% if request.resolver_match.view_name == 'profile_view' %}active{% endif %}">View Profile</a>
+<a href="{% url 'profile_edit' %}" class="btn btn-secondary {% if request.resolver_match.view_name == 'profile_edit' %}active{% endif %}">Edit Profile</a>
+<a href="{% url 'avatar_change' %}" class="btn btn-secondary {% if request.resolver_match.view_name == 'avatar_change' %}active{% endif %}">Change profile image</a>
+<a href="{% url 'password_change' %}" class="btn btn-secondary {% if request.resolver_match.view_name == 'password_change' %}active{% endif %}">Change password</a>
 {% if user.is_superuser %}<a href="{% url 'admin:index' %}" target="_blank" class="btn btn-secondary"><strong>Administration</strong></a>{% endif %}
 {% endif %}
