--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -26,7 +26,7 @@
 
   <button type="submit">Sign up</button>
 </form>
-<p>Already have an account? <a href="{% url 'accounts:login' %}">Log in here</a>.</p>
+<p>Already have an account? <a href="{% url 'login' %}">Log in here</a>.</p>
         </div>
     </div>
 {% endblock %}
