--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -11,6 +11,6 @@
     {{ form.as_p }}
 <button type="submit">Login</button>
 </form>
-<p>Don't have an account? <a href="{% url 'accounts:signup' %}">Sign up now</a>.</p>
-<p><a href="{% url 'reset_password' %}">Forgot something?</a></p>
+<p>Don't have an account? <a href="{% url 'signup' %}">Sign up now</a>.</p>
+<p><a href="{% url 'password_reset' %}">Forgot something?</a></p>
 {% endblock %}
