--- a/templates/website/menu.html
+++ b/templates/website/menu.html
@@ -18,15 +18,15 @@
         </ul>
         <ul class="navbar-nav navbar-right">
             {% if user.is_authenticated %}
-              <li class="nav-item {% if request.resolver_match.view_name == 'accounts:view_profile' %}active{% endif%}">
-                  <a class="nav-link" href="{% url 'accounts:view_profile' %}">View profile{% if request.resolver_match.view_name == 'accounts:profile' %}<span class="sr-only">(current)</span>{% endif %}</a>
+              <li class="nav-item {% if request.resolver_match.view_name == 'profile_view' %}active{% endif%}">
+                  <a class="nav-link" href="{% url 'profile_view' %}">View profile{% if request.resolver_match.view_name == 'profile' %}<span class="sr-only">(current)</span>{% endif %}</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+                  <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               </li>
             {% else %}
-              <li class="nav-item"><a class="nav-link" href="{% url 'accounts:signup' %}">Sign-up</a></li>
-              <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">Login</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign-up</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
             {% endif %}
         </ul>
     </div>
