--- a/cms/static/css/style.css
+++ b/cms/static/css/style.css
@@ -104,8 +104,6 @@ div:hover .edit-button {
 
 .errorlist {
     list-style-type: none;
-    font-weight: 600;
-    padding:5px;
-    border: 1px solid #a01;
-    width: 100%;
+    color: red;
+    padding:0;
 }
