Moved menu heading setting to model.

--- a/templates/website/menu.html
+++ b/templates/website/menu.html
@@ -3,7 +3,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="{% url 'cms:homepage' %}">{{ config.SHORT_TITLE }}</a>
+    <a class="navbar-brand" href="{% url 'cms:homepage' %}">{{ menu_heading }}</a>
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item {% if request.resolver_match.view_name == 'cms:homepage' %}active{% endif%}">
