--- a/accounts/templates/accounts/profile_view.html
+++ b/accounts/templates/accounts/profile_view.html
@@ -1,5 +1,6 @@
 {% extends 'website/base.html' %}
 {% load static %}
+{% load thumbnail %}
 
 {% block heading %}
     <h1 class="display-4">Your profile</h1>
@@ -9,15 +10,20 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-md-12">
-  <ul>
-    <li>First name: {{ request.user.first_name }}</li>
-    <li>Last name: {{ request.user.last_name }}</li>
-    <li>Email: {{ request.user.email }}</li>
-    <li>Phone number: {{ request.user.profile.phone_number }}</li>
-    <li>Country: {{ request.user.profile.country.name }} <img src="{{ request.user.profile.country.flag }}" alt="{{ request.user.profile.country }}"></li>
-    <li>About: {{ request.user.profile.about }}</li>
-  </ul>
-</div>
+            {% if request.user.profile.image %}
+            <div class="col-md-3">
+                <img src="{{ request.user.profile.image|thumbnail_url:'thumbnail' }}" alt="">
+            </div>
+            {% endif %}
+            <div class="col-md-9 user-details">
+              <ul>
+                <li>First name: {{ request.user.first_name }}</li>
+                <li>Last name: {{ request.user.last_name }}</li>
+                <li>Email: {{ request.user.email }}</li>
+                <li>Phone number: {{ request.user.profile.phone_number }}</li>
+                <li>Country: {{ request.user.profile.country.name }} <img src="{{ request.user.profile.country.flag }}" alt="{{ request.user.profile.country }}"></li>
+                <li>About: {{ request.user.profile.about }}</li>
+              </ul>
+            </div>
     </div>
 {% endblock %}
