Added SEO meta tags in models and templates.

--- a/accounts/templates/accounts/profile_view.html
+++ b/accounts/templates/accounts/profile_view.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% load thumbnail %}
 
+{% block meta %}
+    <title>Your profile - {{ config.SITE_TITLE }}</title>
+    <meta name="description" content="" />
+    <meta name="robots" content="noindex, nofollow">
+{% endblock %}
+
 {% block heading %}
     <h1 class="display-4">Your profile</h1>
     {% include 'accounts/navigation.html' %}
