--- a/accounts/templates/registration/password_reset_complete.html
+++ b/accounts/templates/registration/password_reset_complete.html
@@ -1,5 +1,11 @@
 {% extends 'website/base.html' %}
 
+{% block meta %}
+    <title>Password reset complete - {{ config.SITE_TITLE }}</title>
+    <meta name="description" content="" />
+    <meta name="robots" content="noindex, nofollow">
+{% endblock %}
+
 {% block content %}
   <p>
     Your password has been set. You may go ahead and <a href="{% url 'login' %}">sign in</a> now.
