--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -1,4 +1,11 @@
 {% extends 'website/base.html' %}
+
+{% block meta %}
+    <title>Reset password - {{ config.SITE_TITLE }}</title>
+    <meta name="description" content="" />
+    <meta name="robots" content="noindex, nofollow">
+{% endblock %}
+
 {% block heading %}
 <h4 class="margin-padding-0">Reset password</h4>
 {% endblock heading %}
