--- a/accounts/templates/accounts/activation_pending.html
+++ b/accounts/templates/accounts/activation_pending.html
@@ -1,5 +1,11 @@
 {% extends 'website/base.html' %}
 
+{% block meta %}
+    <title>Activate your account - {{ config.SITE_TITLE }}</title>
+    <meta name="description" content="" />
+    <meta name="robots" content="noindex, nofollow">
+{% endblock %}
+
 {% block heading %}
     <h1 class="display-4">Confirm your email address</h1>
 {% endblock %}
