--- a/accounts/templates/accounts/profile_edit.html
+++ b/accounts/templates/accounts/profile_edit.html
@@ -1,5 +1,11 @@
 {% extends 'website/base.html' %}
 
+{% block meta %}
+    <title>Edit profile - {{ config.SITE_TITLE }}</title>
+    <meta name="description" content="" />
+    <meta name="robots" content="noindex, nofollow">
+{% endblock %}
+
 {% block heading %}
     <h1 class="display-4">Edit profile</h1>
     {% include 'accounts/navigation.html' %}
