--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -1,5 +1,11 @@
 {% extends 'website/base.html' %}
 
+{% block meta %}
+    <title>Password reset - {{ config.SITE_TITLE }}</title>
+    <meta name="description" content="" />
+    <meta name="robots" content="noindex, nofollow">
+{% endblock %}
+
 {% block content %}
   <p>
     We've emailed you instructions for setting your password, if an account exists with the email you entered.
